--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     </head>
     <body>
-
-        <h1>My First Heading</h1>
-        <p>My first paragraph.</p>
-
+        <center>
+            <h1>My First Heading</h1>
+            <p>My first paragraph.</p>
+        </center>
     </body>
 </html>
